Portfolio text-align fix intro

--- a/Frontend-Masters/Getting-Starting-with-CSS/portfolio/style.css
+++ b/Frontend-Masters/Getting-Starting-with-CSS/portfolio/style.css
@@ -42,11 +42,12 @@ a:hover {
   color: var(--hotmag);
   text-decoration: none;
 }
+
 /* intro styles */
 #intro {
-  padding-bottom: 10rem;
-  text-align: center;
-  margin-top: 10rem;
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #intro p {
